frontend/test/should_pass/visitedNonArraySyntax.grg
rule r {
	x:Node;
	
	modify {
	---
		exec({ x.visited = x.visited });
	}
}
