frontend/test/should_fail/exectype_AssignSetmapSizeToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:int=42 ;> i:int=x.size());
	}
}